--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+base64 = "0.22.1"
+chrono = { version = "0.4.40", features = ["serde"] }
+reqwest = { version = "0.12.15", features = ["json"] }
+rmcp = { version = "0.1", features = ["server", "transport-io"] }
+schemars = "0.8.22"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "chrono"] }
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+
+[build-dependencies]
+dotenvy = "0.15.7"
